--- a/_pages/license.html
+++ b/_pages/license.html
@@ -18,9 +18,9 @@ description: This blog post is shared under a CC 4.0 International License. Read
 <p>You are hereby granted permission to share (copy and redistribute) and adapt (remix, transform and build upon) the material, in part or in full, in any medium or format, for any purpose, both personal and commercial. I cannot revoke these freedoms as long as you follow these license terms:</p>
 
 <p>
-<ul>
-  <li id="license-list">You must give appropriate credit and indicate if changes were made.</li>
-  <li id="license-list">You may do so in any reasonable manner, but not in any way that suggests I endorse you or your use, unless I state otherwise.</li>
+<ul class="license-list">
+  <li>You must give appropriate credit and indicate if changes were made.</li>
+  <li>You may do so in any reasonable manner, but not in any way that suggests I endorse you or your use, unless I state otherwise.</li>
 </ul>
 </p>
 
