--- a/_pages/license.html
+++ b/_pages/license.html
@@ -19,8 +19,8 @@ description: This blog post is shared under a CC 4.0 International License. Read
 
 <p>
 <ul class="license-list">
-  <li>You must give appropriate credit and indicate if changes were made.</li>
-  <li>You may do so in any reasonable manner, but not in any way that suggests I endorse you or your use, unless I state otherwise.</li>
+  <li class="license-list">You must give appropriate credit and indicate if changes were made.</li>
+  <li class="license-list">You may do so in any reasonable manner, but not in any way that suggests I endorse you or your use, unless I state otherwise.</li>
 </ul>
 </p>
 
