--- a/_pages/mobile.html
+++ b/_pages/mobile.html
@@ -9,7 +9,7 @@ permalink: /mobile
 
 <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,900" rel="stylesheet">
+<noscript><link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,900" rel="stylesheet" media="none" onload="if(media!='all')media='all'"></noscript>
 
 
 <style type="text/css">
