--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About • Francis Borja
+title: About - Francis Borja
 permalink: /about
 description: Hello. My name is Francis and Francis means freedom.
 ---
