--- a/_pages/license.html
+++ b/_pages/license.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: License - Francis Borja
+title: License
 permalink: /license
 description: This blog is shared under a Creative Commons 4.0 International License. You are free to share and adapt with proper attribution.
 ---
