--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: landing
-title: Francis Borja
+title: ""
 ---
 <p>Hello there. My name is Francis.
 I&nbsp;like to write and design stuff.</p>
