--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,9 +11,11 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <p>This blog is meant to be a repository for all the voices in my head, all screaming to be heard, like futile attempts at social media fame. Things get a little weird here sometimes, but if you read my blog often or you know me in real life, you know that’s quite normal. Otherwise, this is just an ordinary blog with an overabundance of opinion—mostly so I can pretend I am as smart as I want to be.</p>
 
-<div class="img-container"><img src="/assets/img/me1.jpg" /></div>
+<p>I am a writer and designer by day, a film buff by night, a <i>mostly</i> vegan during mealtime, and an environmentalist for every second of my life. I am a selectively social ambivert, oscillating between textbook introversion and sporadic spurts of a desperate need to swim into a crowd. Go figure.</p>
 
-<p>I am a writer and designer by day, a film buff by night, a transitioning vegan during mealtime, and an environmentalist for every second of my life. I am a selectively social ambivert, oscillating between textbook introversion and sporadic spurts of a desperate need to swim into a crowd. Go figure.</p>
+<div class="img-container"><img src="/assets/img/me1.jpg" oncontextmenu="return false" /></div>
+
+<p>I have non-linear interests in spreadsheets and web development. I am hand-coding this site with great obsession as this is somehow an extension of who I am—essentially a work in progress. This site will shift and warp and form psychedelic unicorn clouds when you're not looking. I've broken the code so often, that I'm beginning to wonder if my site also has mental health issues.</p>
 
 <p>I like taking <a href="https://instagram.com/freeingfrancis" target="_blank">pictures</a>, even when I’m nearly as much a failure at photography as I am in physics. I also <a href="https://twitter.com/freeingfrancis" target="_blank">tweet</a> sometimes, but mostly to incite climate action. I hate studying but I love learning, and I think an open mind is more indispensable than a diploma (but please stay in school if you’re already there).</p>
 
