--- a/_pages/about.html
+++ b/_pages/about.html
@@ -15,7 +15,7 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <div class="img-container"><img src="/assets/img/me1.jpg" oncontextmenu="return false" /></div>
 
-<p>I have non-linear interests in spreadsheets and web development. I am hand-coding this site with great obsession as this is somehow an extension of who I am&#8212;essentially a work in progress. This site will shift and warp and form psychedelic unicorn clouds when you're not looking. I've broken the code so often, that I'm beginning to wonder if my site also has mental health issues.</p>
+<p>I have unexpected renaissance interests in spreadsheets and web development. I am hand-coding this site with great obsession as this is somehow an extension of who I am&#8212;essentially a work in progress. This site will shift and warp and form psychedelic unicorn clouds when you're not looking. I've broken the code so often, that I'm beginning to wonder if my site also has mental health issues.</p>
 
 <p>I like taking <a href="https://instagram.com/freeingfrancis" target="_blank">pictures</a>, even when I’m nearly as much a failure at photography as I am in physics. I also <a href="https://twitter.com/freeingfrancis" target="_blank">tweet</a> sometimes, but mostly to incite climate action. I hate studying but I love learning, and I think an open mind is more indispensable than a diploma (but please stay in school if you’re already there).</p>
 
