--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,7 +13,7 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <p>I am a writer and designer by day, a film buff by night, a <i>mostly</i> vegan during mealtime, and an environmentalist for every second of my life. I am a selectively social ambivert, oscillating between textbook introversion and sporadic spurts of a desperate need to swim into a crowd. Go figure.</p>
 
-<div class="img-container"><img src="/assets/img/me3.jpg" oncontextmenu="return false" /></div>
+<div class="img-container"><img src="/assets/img/about.jpg" oncontextmenu="return false" /></div>
 
 <p>I have unexpected renaissance interests in spreadsheets and web development. I am hand-coding this site with great obsession as this is somehow an extension of who I am&#8212;essentially a work in progress. This site will shift and warp and form psychedelic unicorn clouds when you're not looking. I've broken the code so often, that I'm beginning to wonder if my site also has mental health issues.</p>
 
