Update: Removed footer, transferred to sidebar

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -21,4 +21,12 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <p>I wouldn’t say go have fun reading, because introspection and the inexorable outward release of my soul isn’t necessarily enjoyable. But if I have made you understand or made you feel understood, and allowed you to feel the full spectrum of emotion&#8212;then by all means have a great time.</p>
 
+<hr />
+
+<div class="profile-content">
+
+  <a href="/license">License</a> <span style="color: #aaa">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
+
+</div>
+
 </div>
