--- a/_pages/license.html
+++ b/_pages/license.html
@@ -69,8 +69,17 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 <br />
 <br />
 <br />
-<br />
 
 <p><a href="javascript:history.back()">&lsaquo; Go back</a></p>
+
+
+<hr />
+
+<div class="profile-content">
+
+  <a href="/about">About</a> <span style="color: #aaa">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
+
+</div>
+
 
 </div>
