--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: landing
 title: Francis Borja
 ---
-<p>Hello there. My name is Francis.
+<p>Hello there. My name is Francis.<br />
 I&nbsp;like to write and design stuff.</p>
