--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@ layout: landing
 title: Francis Borja
 ---
 <p>Hello there. My name is Francis.<br />
-I&nbsp;like to write and design stuffs.</p>
+I&nbsp;like to write and design stuff.</p>
