Fixed some stuff, including but not limited to center-aligning home

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 layout: homev1-1-1
 title: Francis Borja
 ---
-<p>Hello there. My name is Francis.<br />
-I&nbsp;like to write and design stuff.</p>
+<h1>Hello.</h1>
+<h2>My name is Francis.</h2>
+<p>I&nbsp;like to write and design stuff.</p>
