Fixed typo in License

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -13,7 +13,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <h2>Content</h2>
 
-<p>The text and images of this site are licensed under a <a href="https://creativecommons.org/licenses/by/4.0" target="_blank">Creative Commons Attribution 4.0 International License</a>.</p>
+<p>The text and images on this site are licensed under a <a href="https://creativecommons.org/licenses/by/4.0" target="_blank">Creative Commons Attribution 4.0 International License</a>.</p>
 
 <p>You are hereby granted permission to share (copy and redistribute) and adapt (remix, transform and build upon) the material, in part or in full, in any medium or format, for any purpose, both personal and commercial. I cannot revoke these freedoms as long as you follow these license terms:</p>
 
