Migrated to Adobe Typekit; fixed typo on homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Francis Borja
 
 
 <div class="blog-index">
-  <div class="latest">Lastest Post</div>
+  <div class="latest">Latest Post</div>
 
   {% assign post = site.posts.first %}
 
