Update on some stuff; changed serif to Neuton

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: homev2
 title: Francis Borja
 ---
 
-<h1>My name is Francis. I&nbsp;like to write and design stuff.</h1>
+<h1>My name is Francis.<br />
+I&nbsp;like to write and design stuff.</h1>
 
 <hr />
 
