Updated to homev4; changed some arrows to fontawesome

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -10,4 +10,4 @@ permalink: /404
 
 <h2>The page you're trying to open may have been moved or no longer exists. Or you may have misspelled something. Either way, you're here now, lost.</h2>
 
-<p><a href="javascript:history.back()">&lsaquo; Go back to where you came from</a></p>
+<p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back to where you came from</a></p>
