--- a/_pages/license.html
+++ b/_pages/license.html
@@ -70,6 +70,6 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 <br />
 <br />
 
-<p><a href="javascript:history.back()">&lsaquo; Go back</a></p>
+<p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back</a></p>
 
 </div>
