Updated About page; not a vegan anymore :(

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,7 +11,7 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <p>This blog is meant to be a repository for all the voices in my head, all screaming to be heard, like futile attempts at social media fame. Things get a little weird here sometimes, but if you read my blog often or you know me in real life, you know that’s quite normal. Otherwise, this is just an ordinary blog with an overabundance of opinion&#8212;mostly so I can pretend I am as smart as I want to be.</p>
 
-<p>I am a writer and designer by day, a film buff by night, a <i>mostly</i> vegan during mealtime, and an environmentalist for every second of my life. I am a selectively social ambivert, oscillating between textbook introversion and sporadic spurts of a desperate need to swim into a crowd. Go figure.</p>
+<p>I am a writer, designer and an environmentalist. I am a selectively social ambivert, oscillating between textbook introversion and sporadic spurts of a desperate need to swim into a crowd. Go figure.</p>
 
 <div class="img-container"><img src="/assets/img/about.jpg" oncontextmenu="return false" /></div>
 
