Fixed center float for blog page

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -19,7 +19,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <p>
 <ul class="license-list">
-  <li class="license-list">You must give appropriate credit and indicate if changes were made.</li>
+  <li class="license-list">You must give appropriate credit and you must indicate if changes were made.</li>
   <li class="license-list">You may do so in any reasonable manner, but not in any way that suggests I endorse you or your use, unless I state otherwise.</li>
 </ul>
 </p>
