Updated the License to include icons from FlatIcon

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -58,6 +58,19 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <br />
 
+<p><b>Navigation Bar Icons</b></p>
+
+
+<p>The icons used on the navigation bar are used under the Creative Commons 3.0 license. The following authors from <a href="http://www.flaticon.com/" target="blank">FlatIcon</a> created the following icons:</p>
+
+<p>Blog Icon (Feather): <a href="http://www.flaticon.com/authors/anatoly">Anatoly</a>
+
+<br />
+
+About (Human) and Contact (Paper Plane) Icons: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></p>
+
+<br />
+
 <p><b>The Modular F Logo</b></p>
 
 
