Updated the License

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -56,18 +56,13 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <p>Icons (including but not limited to social media icons and icons of other third-party companies) that appear on this site are the property of their respective owners and are used in accordance with their respective legal and brand guidelines.</p>
 
-<br />
+<p>The icons on the navigation bar are used under the Creative Commons 3.0 license. The following authors from <a href="http://www.flaticon.com/" target="blank">FlatIcon</a> created the following icons:</p>
 
-<p><b>Navigation Bar Icons</b></p>
+<p><ul><li>Blog (Feather) Icon: <a href="http://www.flaticon.com/authors/anatoly">Anatoly</a></li>
 
+<li>About (Human) Icon: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li>
 
-<p>The icons used on the navigation bar are used under the Creative Commons 3.0 license. The following authors from <a href="http://www.flaticon.com/" target="blank">FlatIcon</a> created the following icons:</p>
-
-<p>Blog Icon (Feather): <a href="http://www.flaticon.com/authors/anatoly">Anatoly</a>
-
-<br />
-
-About (Human) and Contact (Paper Plane) Icons: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></p>
+<li>Contact (Paper Plane) Icons: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li></ul></p>
 
 <br />
 
