Updated the License

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -58,7 +58,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <p>The icons on the navigation bar are used under the Creative Commons 3.0 license. The following authors from <a href="http://www.flaticon.com/" target="blank">FlatIcon</a> created the following icons:</p>
 
-<p><ul><li class="license-list">Blog (Feather) Icon: <a href="http://www.flaticon.com/authors/anatoly">Anatoly</a></li>
+<p><ul class="license-list"><li class="license-list">Blog (Feather) Icon: <a href="http://www.flaticon.com/authors/anatoly">Anatoly</a></li>
 
 <li class="license-list">About (Human) Icon: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li>
 
