Updated the License

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -62,7 +62,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <li class="license-list">About (Human) Icon: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li>
 
-<li class="license-list">Contact (Paper Plane) Icons: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li></ul></p>
+<li class="license-list">Contact (Paper Plane) Icon: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li></ul></p>
 
 <br />
 
