--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,6 +6,8 @@ permalink: /cv
 <html>
     <head>
 
+      <title>Francis Borja - Curriculum Vitae</title>
+
       <meta charset="UTF-8">
       <meta http-equiv="refresh" content="0; url=https://onedrive.live.com/download?cid=029DECA439C4096F&resid=29DECA439C4096F%213332&authkey=AMVOAIBDZIaIRtM&em=2">
 
