--- a/_pages/work.html
+++ b/_pages/work.html
@@ -4,3 +4,9 @@ title: Work
 permalink: /work
 description: Hello. My name is Francis and Francis means freedom.
 ---
+
+<h1>Hi. This webpage is still under construction. Come back soon.</h1>
+<h2>It might take awhile. Probably a year.</h2>
+
+
+<p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back to where you came from</a></p>
