Changes in Work

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -60,6 +60,8 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <p><ul class="license-list"><li class="license-list">Blog (Feather) Icon: <a href="http://www.flaticon.com/authors/anatoly">Anatoly</a></li>
 
+<li class="license-list">Work (Briefcase) Icon: <a href="http://www.flaticon.com/authors/freepik">Freepik</a></li>
+
 <li class="license-list">About (Human) Icon: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li>
 
 <li class="license-list">Contact (Paper Plane) Icon: <a href="http://www.flaticon.com/authors/gregor-cresnar" target="blank">Gregor Cresnar</a></li></ul></p>
