--- a/_pages/work.html
+++ b/_pages/work.html
@@ -11,5 +11,5 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back to where you came from</a></p>
 
-<div class="home-gap">Message me if you see this. ;)
+<div class="home-gap">Message<br />me<br />if<br />you<br />see<br />this. ;)
 </div>
