Updated error/404 page

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -6,8 +6,10 @@ permalink: /404
 ---
 
 
-<h1>Oh no.</h1>
+<h1>Oh no. &#x1F631</h1>
 
-<h2>The page you're trying to open may have been moved or no longer exists. Or you may have misspelled something. Either way, you're here now, lost.</h2>
+<h2>The page you're trying to open may have been moved or no longer exists. Or you may have misspelled something.</h2>
+<br /><br />
+<h2>Either way, you're here now. (But ain't it wonderful to be so blissfully lost in a foreign place, no?)</h2>
 
 <p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back to where you came from</a></p>
