Updated some stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Francis Borja
 ---
 
 <h1>My name is Francis.<br />
-I&nbsp;like to write and design stuff.</h1>
+I&nbsp;write and design stuff.</h1>
 
 <hr />
 
