--- a/_pages/link.html
+++ b/_pages/link.html
@@ -9,10 +9,10 @@ permalink: /link
       <title>Link</title>
 
       <meta charset="UTF-8">
-      <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=gE7vkCz39eg">
+      <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=TkjOY8-SrlM">
 
       <script type="text/javascript">
-          window.location.href = "https://www.youtube.com/watch?v=gE7vkCz39eg"
+          window.location.href = "https://www.youtube.com/watch?v=TkjOY8-SrlM"
       </script>
 
     </head>
