--- a/_pages/link.html
+++ b/_pages/link.html
@@ -8,6 +8,8 @@ permalink: /link
 
       <title>Link</title>
 
+      {% include analytics.html %}
+
       <meta charset="UTF-8">
       <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=TkjOY8-SrlM">
 
