--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,6 +8,8 @@ permalink: /cv
 
       <title>Francis Borja - Curriculum Vitae</title>
 
+      {% include analytics.html %}
+      
       <meta charset="UTF-8">
       <meta http-equiv="refresh" content="0; url=https://onedrive.live.com/download?cid=029DECA439C4096F&resid=29DECA439C4096F%213332&authkey=AMVOAIBDZIaIRtM&em=2">
 
