--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,11 +14,11 @@ description: Hello. My name is Francis and Francis means freedom.
 
 <div class="img-container"><img src="/assets/img/about.jpg" oncontextmenu="return false" /></div>
 
-<p>I have unexpected renaissance interests in spreadsheets and web development. I am hand-coding this site with great obsession as this is somehow an extension of who I am&#8212;essentially a work in progress. This site will shift and warp and form psychedelic unicorn clouds when you're not looking. I've broken the code so often, that I'm beginning to wonder if my site also has mental health issues.</p>
+<p>I have unexpected renaissance interests in spreadsheets and web development. I am hand-coding this site with great obsession as this is somehow an extension of who I am: essentially a work in progress. This site will shift and warp and form psychedelic unicorn clouds when you're not looking. I've broken the code so often, that I'm beginning to wonder if my site also has mental health issues.</p>
 
 <p>I like taking <a href="https://instagram.com/freeingfrancis" target="_blank">pictures</a>, even when I’m nearly as much a failure at photography as I am in physics. I hate studying but I love learning, and I think an open mind is more indispensable than a diploma (but please stay in school if you’re already there).</p>
 
-<p>I wouldn’t say go have fun reading, because introspection and the inexorable outward release of my soul isn’t necessarily enjoyable. But if I have made you understand or made you feel understood, and allowed you to feel the full spectrum of emotion&#8212;then by all means have a great time.</p>
+<p>I wouldn’t say go have fun reading, because introspection and the inexorable outward release of my soul isn’t necessarily enjoyable. But if I have made you understand or made you feel understood, and allowed you to feel the full spectrum of emotion, then by all means have a great time.</p>
 
 
 </div>
