Updated CV link

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -11,7 +11,7 @@ permalink: /cv
       {% include analytics.html %}
 
       <meta charset="UTF-8">
-      <meta http-equiv="refresh" content="0; url=https://onedrive.live.com/download?cid=029DECA439C4096F&resid=29DECA439C4096F%213332&authkey=AMVOAIBDZIaIRtM&em=2">
+      <meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?dl=1">
 
       <script type="text/javascript">
           window.location.href = "https://onedrive.live.com/download?cid=029DECA439C4096F&resid=29DECA439C4096F%213332&authkey=AMVOAIBDZIaIRtM&em=2"
