--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -14,7 +14,7 @@ permalink: /cv
       <meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?dl=1">
 
       <script type="text/javascript">
-          window.location.href = "https://onedrive.live.com/download?cid=029DECA439C4096F&resid=29DECA439C4096F%213332&authkey=AMVOAIBDZIaIRtM&em=2"
+          window.location.href = "https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?dl=1"
       </script>
 
     </head>
