--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -6,7 +6,7 @@ permalink: /cv
 <html>
     <head>
 
-      <title>Francis Borja - Curriculum Vitae</title>
+      <title>Francis Borja — Curriculum Vitae</title>
 
       {% include analytics.html %}
 
