--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -11,10 +11,10 @@ permalink: /cv
       {% include analytics.html %}
 
       <meta charset="UTF-8">
-      <meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?dl=1">
+      <meta http-equiv="refresh" content="0; url=https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?raw=1">
 
       <script type="text/javascript">
-          window.location.href = "https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?dl=1"
+          window.location.href = "https://www.dropbox.com/s/834v19akn2zffv4/Borja%2C%20Francis%20-%20Curriculum%20Vitae.pdf?raw=1"
       </script>
 
     </head>
