--- a/_pages/mobile.html
+++ b/_pages/mobile.html
@@ -59,7 +59,7 @@ permalink: /mobile
 
 <div>
 
-<h1>Hello there. Sorry, but you're on an unsupported device.</h1>
+<h1>Hello there! Sorry, but you're on an unsupported device.</h1>
 
 <h2>I designed this site to be viewed on a wide-angle screen. Please use a desktop or a high-resolution tablet with a width of at least 1000 pixels.</h2>
 
