--- a/_pages/license.html
+++ b/_pages/license.html
@@ -9,9 +9,13 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <h1>License</h1>
 
+<hr>
+
+<br />
+<br />
 <br />
 
-<h2>Content</h2>
+<h2>I. Content</h2>
 
 <p>The text and images on this site are licensed under a <a href="https://creativecommons.org/licenses/by/4.0" target="_blank">Creative Commons Attribution 4.0 International License</a>.</p>
 
@@ -28,14 +32,14 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <br />
 
-<p><b>Text</b></p>
+<p><b>A. Text</b></p>
 
 
 <p>All text content is written by me unless otherwise stated, in which case the original creator or creators are properly attributed, referenced and/or linked, unless the content is derived from the public domain, is shared under a Creative Commons Zero License, or is provided with express permission for use without attribution.</p>
 
 <br />
 
-<p><b>Images</b></p>
+<p><b>B. Images</b></p>
 
 
 <p>All images on this site, in whatever format, are taken by me unless otherwise stated, in which case the original creator or creators are properly attributed, referenced and/or linked, unless the content is derived from the public domain, is shared under a Creative Commons Zero License, or is provided with express permission for use without attribution.</p>
@@ -47,11 +51,11 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 <br /><br /><br /><br />
 
 
-<h2>Logos and Icons</h2>
+<h2>II. Logos and Icons</h2>
 
 <br />
 
-<p><b>Third-Party Icons</b></p>
+<p><b>A. Third-Party Icons</b></p>
 
 
 <p>Icons (including but not limited to social media icons and icons of other third-party companies) that appear on this site are the property of their respective owners and are used in accordance with their respective legal and brand guidelines.</p>
@@ -68,7 +72,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 
 <br />
 
-<p><b>The Modular F Logo</b></p>
+<p><b>B. The Modular F Logo</b></p>
 
 
 <p>I reserve all rights to the Modular F Logo and all its variations as protected by copyright laws. You may not use, duplicate or modify the logo without express permission from me, unless the use, duplication and modification of the material is covered by fair use practices.</p>
