--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Francis Borja
 ---
 
-<h1>My name is Francis.<br />
+<h1>Hello. My name is Francis.<br />
 I&nbsp;write and design stuff.</h1>
 
 <hr />
