Update to email

--- a/_pages/license.html
+++ b/_pages/license.html
@@ -78,7 +78,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 <p>I reserve all rights to the Modular F Logo and all its variations as protected by copyright laws. You may not use, duplicate or modify the logo without express permission from me, unless the use, duplication and modification of the material is covered by fair use practices.</p>
 
 
-<p><a href="mailto:freeingfrancis@outlook.com?subject=Request to use the Modular F logo&body=I would like to request permission to use the Modular F logo.">Request permission &rsaquo;</a></p>
+<p><a href="mailto:hello@francisborja.com?subject=Request to use the Modular F logo&body=I would like to request permission to use the Modular F logo.">Request permission &rsaquo;</a></p>
 
 <br />
 <br />
