Update to Draft

--- a/_pages/draft.html
+++ b/_pages/draft.html
@@ -5,6 +5,8 @@ permalink: /draft
 description: Draft
 ---
 
+<p><i>Unedited draft</i></p>
+
 <p>This election cycle has been one of the most polarizing yet infinitely inspiring depending on where you stand. For a lot of us, we have been inexorably made witness to changing tides, a movement started by a reluctant candidate who now finds unrelenting strength from being on the atypical campaign trail — run by volunteers with offshoots all over the country, a stark absence of traditional political machinery and unified financing, a campaign mostly run on foot without the deep, often conditional resources of vested interests. A candidate with no political ties save for a husband whose untimely and sensationalized death threw her into national recognition, her campaign banked on the limitless generosity of the Filipino spirit: frequently defined by its soft, forgiving nature and situational resilience, a word repeatedly abused to condition us into submission and forget the causes of our compounding crises and entrenched poverty, most of which are rooted in bastardized governance.</p>
 
 <p>The campaign increasingly swelled in size, each rally flocked by more and more people, in many instances as a competitive response to the previous sortie's crowd estimate. The parades grew louder, echoing through unreached corners of the archipelago, the <i>laylayan</i> — fringes, pockets of communities rarely reached by mainstream government support. As election day grew closer, the fervor steadier and more resolute, people ask: what happens to this vigor after we've casted our vote?</p>
