--- a/_pages/draft.html
+++ b/_pages/draft.html
@@ -1,20 +1,47 @@
 ---
 layout: post
-title: Building A Nation
+title:
 permalink: /draft
-description: Draft
+description: Ongoing draft
 ---
 
-<p><i>Unedited draft</i></p>
+<hr />
+<h1>Rewriting A Dictatorship</h1>
 
-<p>This election cycle has been one of the most polarizing yet infinitely inspiring depending on where you stand. For a lot of us, we have been inexorably made witness to changing tides, a movement sparked by a reluctant candidate who now finds unrelenting strength from being on the atypical campaign trail &mdash; run by volunteers with offshoots all over the country, a stark absence of traditional political machinery and unified financing, a campaign mostly run on foot without the deep, often conditional resources of vested interests. A candidate with no political ties save for a husband whose untimely and sensationalized death threw her into national recognition, her campaign banked on the limitless generosity of the Filipino spirit: frequently defined by its soft, forgiving nature and situational resilience, a word repeatedly abused to condition us into submission and forget the causes of our compounding crises and entrenched poverty, most of which are rooted in bastardized governance.</p>
+<p>&nbsp;</p>
 
-<p>The campaign swelled in size and scope, each rally flocked by more and more people, in many instances as a competitive response to the previous sortie's crowd estimate. The parades grew louder, echoing through unreached corners of the archipelago, the <i>laylayan</i> &mdash; fringes, pockets of communities rarely reached by mainstream government support. As election day grew closer, the fervor steadier and more resolute, people ask: what happens to this vigor after we've casted our vote?</p>
+<p>People remember the past like it's frozen in time. We pine for it with delicate longing, decades in suspended animation, moments immovable and fixed like photographs decaying in albums. The way we reminisce about the past has usually been subliminally tainted by our fond memories of it, a tender prejudice to the good, old days. Even if we remember the unpleasant and the unfortunate, they never seem so mortifying, often as a result of the passage of time that has softened the hard edges and overwrote trauma with our blissful survival response to it.</p>
+
+<p>This bias toward the better version of history is used to narrate the story of the dark years of Martial Law and overwrite our fallible perception of the past, today.</p>
+
+<p>I was born several years after the People Power Revolution that ousted Ferdinand Marcos and, to a large extent, his family. My life was made possible by a new constitution. I did not live through censorship, the widespread murder and disappearances of dissenters, and the economic fallout and resulting descent into profound poverty of millions of Filipinos from the dictatorship, conditions that have spilled over and endured today. But more curious is the fact that I never learned any of this in school — not the atrocities, not even the purported golden years. A consequential chapter of our identity as Filipinos undiscussed, arrested in the shadows and only spoken of through whispers, possibly because of the shame it carried or more likely the machinery of disinformation, the influence of the Marcoses seeping through the bastions of power that has prevented their story to be published and seen in all its naked perversion.</p>
+
+<p>The non-inclusion of this critical section of our history in school curriculum paved the way for the Marcos family to contaminate the records of our past. For decades, they launched disinformation campaigns to cover up the dead bodies in their backyard and parade a false facade of a prosperous Philippines in the 70s and 80s. This is surprisingly easy: these decades have been regarded by many as the best years of the 20th century, full of vigor and life, the decades of disco and soul. This tainting of how we perceive the past is also unsurprisingly familiar: the 70s commenced the LGBT liberation and the 80s was when, at the cusp of freedom, we lost a generation of gay people to the AIDS epidemic largely due to restored social stigma and willful government neglect.</p>
+
+<p>Fighting disinformation is grueling when historical facts are not established in mainstream educational materials and indoctrinated to children who grow up with the knowledge of what it took to free this country. It would have taken a lot more than Facebook algorithms to revise history when facts are being taught in elementary schools every Tuesday.</p>
+
+<p>Imelda, the wife of the former dictator, who had a level of extravagance so extreme that a word, Imeldific, was coined after her, was infamously quoted as saying that "perception is real, truth is not." She’s always believed in the power of illusions and grandiose posturing so people forget who the real enemy is. As the economy declined, ambitious projects were green-lit, bridges and buildings so ostentatious that they seemed more important than the slums that had begun to smother the open spaces of Manila and in many parts of the country.</p>
+
+<p>The deep-seated poverty since the dictatorship is evidence that the past isn’t frozen in time; it flows. The consequences of one family's choices rippled all the way to the present and six presidents later, the same issues persist.</p>
+
+<p>Time flowing is like the laceration we got as kids when we fell from a bicycle that, at the time, throbbed with every heartbeat, but has since healed and formed into a scar. We remember the bike ride, the wind whipping on our skin, the pure, endless joy of momentary freedom, and maybe also the fall, but the pain... no longer. The present perception that it was once painful may be real, but the truth is like its scar — there will always be proof that it was there.</p>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<hr />
+<h1>Rebuilding A Nation</h1>
+
+<p>&nbsp;</p>
+
+<p>This election cycle has been one of the most polarizing yet infinitely inspiring depending on where you stand. For a lot of us, we have been inexorably made witness to changing tides, a movement sparked by a reluctant candidate who now finds unrelenting strength from being on the atypical campaign trail — operated by volunteers with offshoots all over the country, a stark absence of traditional political machinery and unified financing, a campaign mostly run on foot without the deep, often conditional resources of vested interests. A candidate with no political ties save for a husband whose untimely and sensationalized death threw her into national recognition, her campaign banked on the limitless generosity of the Filipino spirit: frequently defined by its soft, forgiving nature and situational resilience, a word repeatedly abused to condition us into submission and forget the causes of our compounding crises and entrenched poverty, most of which are rooted in corrupt governance.</p>
+
+<p>The campaign swelled in size and scope, each rally flocked by more and more people, in many instances as a competitive response to the previous sortie's crowd estimate. The parades grew louder, echoing through unreached corners of the archipelago, the laylayan — fringes, pockets of communities rarely reached by mainstream government support. As election day grew closer, the fervor steadier and more resolute, people ask: what happens to this vigor after we've casted our vote?</p>
 
 <p>The premise was mostly a sense of bittersweet parting from a campaign that's invigorated the nation that has for so long sat quietly as the world passed it by, weary of fighting, of resisting, a surrender to the forces of fate and an approach to difficulty by just letting everything go. This resigned frame of mind has of course been exploited as one of the pillars for disinformation to stand on, a cunning and intoxicating network of lies to cleanse the former dictator's family of its violent past and rewrite the history of their barbarity to their own people.</p>
 
-<p>The ideal response to the question is to sustain it, to make this election only the opening of the floodgates. The right to suffrage may be the bedrock of a democracy, but an electorate is only as powerful as when it participates in nation-building as involved citizens after an election. We've witnessed many administrations fail, mostly due to the sheer weight of their own corrupt ambition, but also because, in the grand scheme of working together as a united country, many of us simply weren’t there.</p>
+<p>The ideal course of action is to sustain this energy, to make this election only the opening of the floodgates. The right to suffrage may be the bedrock of a democracy, but an electorate is only as powerful as when it participates in nation-building as involved citizens after an election. We've witnessed many administrations fail, mostly due to the sheer weight of their own corrupt ambition, but also because, in the grand scheme of working together as a united country, many of us simply weren’t there.</p>
 
-<p>Maybe that's easier to say than do as are most colossal responsibilities of a taxpayer. But what we've seen in this campaign is that these responsibilities are shared by all of us &mdash; a patriotic duty that is neither mine nor yours alone. The truth is, the one real candidate who espouses unity does not pride herself in being capable of doing everything herself by virtue of her authority and instead recognizes her role as the first to lay the foundation, and asks all of us to participate, to take one brick each to rebuild the Philippines.</p>
+<p>Maybe that's easier to say than do as are most colossal responsibilities of a taxpayer. But what we've seen in this campaign is that these responsibilities are shared by all of us — a patriotic duty that is neither mine nor yours alone. The truth is, the one real candidate who espouses unity does not pride herself in being capable of doing everything herself by virtue of her authority and instead recognizes her role as the first to lay the foundation, and asks all of us to participate, to take one brick each to rebuild the Philippines.</p>
 
 <p>You've casted your vote and your voice has been heard, now speak.</p>
